--- a/accounts/templates/accounts/custom_widget.html
+++ b/accounts/templates/accounts/custom_widget.html
@@ -1,3 +1,4 @@
+{% load i18n %}
 <div class="flex flex-col w-full border-opacity-50">
   <div class="grid h-20 card bg-base-300 rounded-box place-items-center">
     <div class="flex items-center px-4">
@@ -7,7 +8,7 @@
       <input type="file" name="profile_picture" id="id_profile_picture" class="file-input file-input-ghost w-full">
     </div>
   </div>
-  <div class="divider">OR</div>
+  <div class="divider">{% trans "OR" %}</div>
   <div class="grid h-20 card bg-base-300 rounded-box place-items-center">
     <label id="clear_label_btn" for="profile_picture-clear_id" class="btn">
       <svg class="w-5 h-5 fill-current stroke-current" viewBox="0 -0.14 20.436 20.436" xmlns="http://www.w3.org/2000/svg"><g id="delete-user-circle" transform="translate(-1.979 -2)">
@@ -16,7 +17,7 @@
         <path id="primary-2" data-name="primary" d="M14,7.53A4.09,4.09,0,0,0,12,7a4,4,0,1,0,3,6.64" fill="none" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"></path>
         <path id="primary-3" data-name="primary" d="M20.48,15a8.86,8.86,0,0,1-2.12,3.36A9,9,0,1,1,12,3a8.8,8.8,0,0,1,3,.52" fill="none" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"></path> </g>
       </svg>
-      <span id="clear_text">Clear</span>
+      <span id="clear_text">{% trans "Clear" %}</span>
     </label>
     <input type="checkbox" name="profile_picture-clear" id="profile_picture-clear_id" aria-label="Checkbox" class="hidden" onclick="blurProfilePic()">
   </div>
