--- a/accounts/templates/partials/account_connection_buttons.html
+++ b/accounts/templates/partials/account_connection_buttons.html
@@ -1,10 +1,11 @@
+{% load i18n %}
 <div class="text-center py-6 px-3 mt-32 lg:mt-0">
   {% if relation_exists %}
     <button class="btn btn-disabled">
       <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-5 h-5">
         <path stroke-linecap="round" stroke-linejoin="round" d="M13.19 8.688a4.5 4.5 0 011.242 7.244l-4.5 4.5a4.5 4.5 0 01-6.364-6.364l1.757-1.757m13.35-.622l1.757-1.757a4.5 4.5 0 00-6.364-6.364l-4.5 4.5a4.5 4.5 0 001.242 7.244" />
       </svg>
-      Connected
+      {% trans "Connected" %}
     </button>
   {% else %}
     {% if request_to_exists %}
@@ -12,7 +13,7 @@
     <form method="POST">
       {% csrf_token %}
       <div class="tooltip tooltip-top tooltip-error" data-tip="click to cancel request">
-        <button type="submit" name="undo_request_form" class="btn btn-success opacity-50 border-2 border-emerald-700"><span class="loading loading-spinner"></span>Request Sent</button>
+        <button type="submit" name="undo_request_form" class="btn btn-success opacity-50 border-2 border-emerald-700"><span class="loading loading-spinner"></span>{% trans "Request Sent" %}</button>
       </div>
     </form>
     {% elif request_from_exists %}
@@ -24,7 +25,7 @@
 
         <!-- SELECT RELATION TYPE -->
         <label class="label">
-          <p class="label-text">Who is <span class="font-bold">{% firstof account.first_name account.email %}</span> to you ?</p>
+          <p class="label-text">{% trans "Who is" %} <span class="font-bold">{% firstof account.first_name account.email %}</span> {% trans "to you ?" %}</p>
         </label>
         <select class="select select-bordered" name="relation_type" id="id_relation_type">
           {% for option in accept_form.relation_type %}
@@ -40,7 +41,7 @@
         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-5 sm:w-6 h-5 sm:h-6">
           <path stroke-linecap="round" stroke-linejoin="round" d="M13.19 8.688a4.5 4.5 0 011.242 7.244l-4.5 4.5a4.5 4.5 0 01-6.364-6.364l1.757-1.757m13.35-.622l1.757-1.757a4.5 4.5 0 00-6.364-6.364l-4.5 4.5a4.5 4.5 0 001.242 7.244" />
         </svg>
-        Connect
+        {% "Connect" %}
       </button>
     </form>
     {% endif %}
