--- a/accounts/templates/partials/account_dashboard.html
+++ b/accounts/templates/partials/account_dashboard.html
@@ -1,13 +1,14 @@
+{% load i18n %}
 <div class="w-full lg:w-4/12 px-4 lg:order-1">
   <div class="flex justify-center py-4 lg:pt-4 pt-8">
     <div class="mr-4 p-3 text-center">
-      <span class="text-xl font-bold block uppercase tracking-wide ">{{relations.count}}</span><span class="text-sm text-gray-400">Connections</span>
+      <span class="text-xl font-bold block uppercase tracking-wide ">{{relations.count}}</span><span class="text-sm text-gray-400">{% translate "Connections" %}</span>
     </div>
     <div class="mr-4 p-3 text-center">
-      <span class="text-xl font-bold block uppercase tracking-wide ">{{account_photos.count}}</span><span class="text-sm text-gray-400">Photos</span>
+      <span class="text-xl font-bold block uppercase tracking-wide ">{{account_photos.count}}</span><span class="text-sm text-gray-400">{% translate "Photos" %}</span>
     </div>
     <div class="lg:mr-4 p-3 text-center">
-      <span class="text-xl font-bold block uppercase tracking-wide ">{{account_comments.count}}</span><span class="text-sm text-gray-400">Comments</span>
+      <span class="text-xl font-bold block uppercase tracking-wide ">{{account_comments.count}}</span><span class="text-sm text-gray-400">{% translate "Comments" %}</span>
     </div>
   </div>
 </div>
