--- a/albums/templates/albums/album_detail.html
+++ b/albums/templates/albums/album_detail.html
@@ -1,5 +1,6 @@
 {% extends 'core/base.html' %}
 {% load static %}
+{% load i18n %}
 {% block title %}Albums{% endblock title %}
 
 {% load thumbnail %}
@@ -31,10 +32,12 @@
     {% endif %}
 
     <div class="flex justify-between">
-      <h2 class="sr-only">Album Detail</h2>
+      <h2 class="sr-only">{% trans "Album Detail" %}</h2>
       <h1 class="text-3xl font-semibold tracking-tight">{{album.title|capfirst}}</h1>
       {% if user == album.creator %}
+      {% blocktranslate %}
       <div class="flex items-center tooltip tooltip-left" data-tip="Album settings">
+      {% endblocktranslate %}
         <a href="{% url 'albums:album-access' album.pk %}">
           <svg class="w-10 h-10 sm:w-12 sm:h-12 p-2 hover:bg-gray-100/75 hover:rounded-full stroke-current"  xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 6V4m0 2a2 2 0 100 4m0-4a2 2 0 110 4m-6 8a2 2 0 100-4m0 4a2 2 0 110-4m0 4v2m0-6V4m6 6v10m6-2a2 2 0 100-4m0 4a2 2 0 110-4m0 4v2m0-6V4"></path></svg>        </a>
       </div>
@@ -126,7 +129,7 @@
         <div class="mt-6">
           {% if users_with_access %}
           <div class="flex items-center space-x-2 text-base">
-            <h4 class="font-semibold mb-2">Shared with: </h4>
+            <h4 class="font-semibold mb-2">{% trans "Shared with: " %}</h4>
             <div class="badge badge-outline mb-2">
               {# <svg class="w-4 h-4 fill-current mr-1" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M13.803 5.33333C13.803 3.49238 15.3022 2 17.1515 2C19.0008 2 20.5 3.49238 20.5 5.33333C20.5 7.17428 19.0008 8.66667 17.1515 8.66667C16.2177 8.66667 15.3738 8.28596 14.7671 7.67347L10.1317 10.8295C10.1745 11.0425 10.197 11.2625 10.197 11.4872C10.197 11.9322 10.109 12.3576 9.94959 12.7464L15.0323 16.0858C15.6092 15.6161 16.3473 15.3333 17.1515 15.3333C19.0008 15.3333 20.5 16.8257 20.5 18.6667C20.5 20.5076 19.0008 22 17.1515 22C15.3022 22 13.803 20.5076 13.803 18.6667C13.803 18.1845 13.9062 17.7255 14.0917 17.3111L9.05007 13.9987C8.46196 14.5098 7.6916 14.8205 6.84848 14.8205C4.99917 14.8205 3.5 13.3281 3.5 11.4872C3.5 9.64623 4.99917 8.15385 6.84848 8.15385C7.9119 8.15385 8.85853 8.64725 9.47145 9.41518L13.9639 6.35642C13.8594 6.03359 13.803 5.6896 13.803 5.33333Z"></path></svg> #}
               <svg class="w-4 h-4 mr-1.5" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
@@ -173,14 +176,14 @@
           <path d="M224 480h640a32 32 0 1 1 0 64H224a32 32 0 0 1 0-64z"></path>
           <path d="m237.248 512 265.408 265.344a32 32 0 0 1-45.312 45.312l-288-288a32 32 0 0 1 0-45.312l288-288a32 32 0 1 1 45.312 45.312L237.248 512z"></path>
         </svg>
-        Back
+        {% trans "Back" %}
       </a>
       {% if user == album.creator %}
         <a href="{% url 'albums:album-access' album.pk %}" class="btn btn-outline">
           <svg class="w-6 h-6 stroke-current"  xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24">
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 6V4m0 2a2 2 0 100 4m0-4a2 2 0 110 4m-6 8a2 2 0 100-4m0 4a2 2 0 110-4m0 4v2m0-6V4m6 6v10m6-2a2 2 0 100-4m0 4a2 2 0 110-4m0 4v2m0-6V4"></path>
           </svg>
-          Album Settings
+          {% trans "Album Settings" %}
         </a>
       {% endif %}
     </div>
