--- a/photos/templates/partials/breadcrumb_add_photos.html
+++ b/photos/templates/partials/breadcrumb_add_photos.html
@@ -1,4 +1,5 @@
 {% extends 'partials/breadcrumb_detail.html' %}
+{% load i18n %}
 
 {% block subcrumb %}
 <li>
@@ -7,7 +8,7 @@
     <svg class="h-5 w-5 flex-shrink-0 text-gray-400" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
       <path fill-rule="evenodd" d="M7.21 14.77a.75.75 0 01.02-1.06L11.168 10 7.23 6.29a.75.75 0 111.04-1.08l4.5 4.25a.75.75 0 010 1.08l-4.5 4.25a.75.75 0 01-1.06-.02z" clip-rule="evenodd" />
     </svg>
-    <a href="{% url 'photos:add_photos_to_album' album.id %}" class="ml-2 lg:ml-4 text-sm font-medium text-gray-500 hover:text-gray-700">Add photos</a>
+    <a href="{% url 'photos:add_photos_to_album' album.id %}" class="ml-2 lg:ml-4 text-sm font-medium text-gray-500 hover:text-gray-700">{% trans "Add photos" %}</a>
   </div>
 </li>
 {% endblock subcrumb %}
