--- a/photos/templates/photos/photo_edit.html
+++ b/photos/templates/photos/photo_edit.html
@@ -1,8 +1,9 @@
 {% extends 'core/base.html' %}
 {% load static %}
 {% load thumbnail %}
+{% load i18n %}
 
-{% block title %}Photo Settings{% endblock title %}
+{% block title %}{% trans "Photo Settings" %}{% endblock title %}
 
 {% block breadcrumbs %}
   {% include 'partials/breadcrumb_photo_settings.html' %}
@@ -16,7 +17,7 @@
 
         <img class="rounded-lg" src="{{photo.image.url}}" alt="{{photo.pk}}" id="current_photo">
 
-        <p class="mt-2 text-sm text-right font-light">Uploaded by <span class="font-medium">{% firstof photo.uploaded_by.first_name photo.uploaded_by.email %}</span></p>
+        <p class="mt-2 text-sm text-right font-light">{% trans "Uploaded by " %}<span class="font-medium">{% firstof photo.uploaded_by.first_name photo.uploaded_by.email %}</span></p>
       </div>
     </section>
 
@@ -35,9 +36,9 @@
           </span>
             <span>
               {% if photo.is_default %}
-              This photo is your Album cover
+                {% trans "This photo is your Album cover" %}
               {% else %}
-              Choose this photo as your Album cover
+                {% trans "Choose this photo as your Album cover" %}
               {% endif %}
             </span>
             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-5 h-5 sm:w-6 sm:h-6 mb-1">
@@ -48,7 +49,7 @@
       </div>
 
       <div class="relative grid grid-cols-1 mb-6 lg:mb-10">
-        <label for="description" class="absolute text-xs font-medium left-2.5 -top-2 z-10 bg-base-100 px-2">Photo description</label>
+        <label for="description" class="absolute text-xs font-medium left-2.5 -top-2 z-10 bg-base-100 px-2">{% trans "Photo description" %}</label>
         {{form_description_form}}
       </div>
       <div class="flex flex-col w-full lg:flex-row">
@@ -64,14 +65,14 @@
             </button>
           </div>
         </div>
-        <div class="divider lg:divider-horizontal">OR</div>
+        <div class="divider lg:divider-horizontal">{% trans "OR" %}</div>
 
           <div class="grid flex-grow h-28 sm:h-32 card bg-base-300 rounded-box place-items-center">
             <div class="flex flex-wrap-reverse gap-2">
               <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" class="w-5 h-5 sm:w-6 sm:h-6 mb-0.5 sm:mb-1">
                 <path stroke-linecap="round" stroke-linejoin="round" d="M3 16.5v2.25A2.25 2.25 0 005.25 21h13.5A2.25 2.25 0 0021 18.75V16.5m-13.5-9L12 3m0 0l4.5 4.5M12 3v13.5" />
               </svg>
-              <p class="font-semibold sm:text-lg">Replace this photo :</p>
+              <p class="font-semibold sm:text-lg">{% trans "Replace this photo :" %}</p>
             </div>
             <div class="flex flex-wrap place-content-center gap-4">
 
@@ -94,8 +95,8 @@
       <div class="table w-full">
         <div class="table-header-group">
           <div class="table-row">
-            <div class="table-cell text-left">Photo access</div>
-            <div class="table-cell text-left">Full Name</div>
+            <div class="table-cell text-left">{% trans "Photo access" %}</div>
+            <div class="table-cell text-left">{% trans "Full Name" %}</div>
           </div>
         </div>
         <div class="table-row-group">
@@ -134,12 +135,12 @@
               <path d="M224 480h640a32 32 0 1 1 0 64H224a32 32 0 0 1 0-64z"></path>
               <path d="m237.248 512 265.408 265.344a32 32 0 0 1-45.312 45.312l-288-288a32 32 0 0 1 0-45.312l288-288a32 32 0 1 1 45.312 45.312L237.248 512z"></path>
             </svg>
-            Back
+            {% trans "Back" %}
           </a>
         </div>
         <button type="submit" value="" class="btn btn-block btn-outline gap-4">
           <svg class="w-6 h-6" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M18.1716 1C18.702 1 19.2107 1.21071 19.5858 1.58579L22.4142 4.41421C22.7893 4.78929 23 5.29799 23 5.82843V20C23 21.6569 21.6569 23 20 23H4C2.34315 23 1 21.6569 1 20V4C1 2.34315 2.34315 1 4 1H18.1716ZM4 3C3.44772 3 3 3.44772 3 4V20C3 20.5523 3.44772 21 4 21L5 21L5 15C5 13.3431 6.34315 12 8 12L16 12C17.6569 12 19 13.3431 19 15V21H20C20.5523 21 21 20.5523 21 20V6.82843C21 6.29799 20.7893 5.78929 20.4142 5.41421L18.5858 3.58579C18.2107 3.21071 17.702 3 17.1716 3H17V5C17 6.65685 15.6569 8 14 8H10C8.34315 8 7 6.65685 7 5V3H4ZM17 21V15C17 14.4477 16.5523 14 16 14L8 14C7.44772 14 7 14.4477 7 15L7 21L17 21ZM9 3H15V5C15 5.55228 14.5523 6 14 6H10C9.44772 6 9 5.55228 9 5V3Z" fill="currentColor"></path></svg>
-          Save changes
+          {% trans "Save changes" %}
         </button>
       </div>
     </form>
